kubernetes/apps/networking/homelab-external-services/duplicati/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: duplicati
  namespace: networking
spec:
  ports:
    - name: duplicati-app
      port: 80
      protocol: TCP
      targetPort: 8200
  type: ClusterIP
