kubernetes/apps/networking/homelab-external-services/duplicati/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: duplicati
  namespace: networking
  annotations:
    external-dns/is-public: "true"
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    hajimari.io/enable: "true"
    hajimari.io/icon: backup-restore
    kubernetes.io/ingress.class: traefik
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-external-authelia-auth@kubernetescrd"
spec:
  tls:
    - hosts:
        - "duplicati.${SECRET_DOMAIN}"
      secretName: "duplicati.${SECRET_DOMAIN}-tls"
  rules:
    - host: "duplicati.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: duplicati
                port:
                  name: duplicati-app
